<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center"
        >
        <TextView
            android:id="@+id/registar_conta"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/registar_conta"
            style="@style/TextAppearance.AppCompat.Title"
            android:textColor="@color/colorPrimary"
            android:layout_marginBottom="350dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/register_username"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            app:placeholderText="@string/username_hint"
            app:counterEnabled="true"
            app:counterMaxLength="30"
            android:hint="@string/nome_user"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/registar_conta"
            android:layout_marginStart="20dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="20dp"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/register_username_text"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:inputType="textPersonName"
                android:textColor="@color/black" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/register_email"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            app:placeholderText="@string/email_hint"
            app:counterEnabled="true"
            app:counterMaxLength="30"
            android:hint="@string/email"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/register_username"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/register_email_text"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:inputType="textEmailAddress"
                android:textColor="@color/black" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/register_password"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            app:placeholderText="@string/password_hint"
            app:counterEnabled="true"
            app:counterMaxLength="30"
            android:hint="@string/password"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/register_email"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/register_password_text"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:inputType="textPassword"
                android:textColor="@color/black" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/register_confirm_password"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            app:placeholderText="@string/confirm_password_hint"
            app:counterEnabled="true"
            app:counterMaxLength="30"
            android:hint="@string/password_confirm"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/register_password"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/register_confirm_password_text"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:inputType="textPassword"
                android:textColor="@color/black" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/createAccountButton"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginTop="20dp"
            android:text="@string/criar_conta"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/register_confirm_password"
            app:layout_constraintVertical_bias="0.2" />

    </androidx.constraintlayout.widget.ConstraintLayout>



</ScrollView>