<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

        <ImageView
            android:id="@+id/login_logo"
            android:layout_width="350dp"
            android:layout_height="350dp"
            android:layout_marginTop="20dp"
            app:layout_constraintBottom_toTopOf="@+id/linear_layout_campos"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/biodiversidade" />

        <LinearLayout
            android:id="@+id/linear_layout_campos"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintTop_toBottomOf="@+id/login_logo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/loginButton"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/login_email"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                app:placeholderText="@string/email_hint"
                app:counterEnabled="true"
                app:counterMaxLength="30"
                android:hint="@string/email"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                >
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/login_email_text"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:inputType="textEmailAddress"
                    android:textColor="@color/black" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/login_password"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                app:placeholderText="@string/password_hint"
                app:counterEnabled="true"
                app:counterMaxLength="30"
                android:hint="@string/password"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="20dp"
                >
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/login_password_text"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:inputType="textPassword"
                    android:textColor="@color/black" />

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>


        <Button
            android:id="@+id/loginButton"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:text="@string/login"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            app:layout_constraintBottom_toTopOf="@+id/text_registar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linear_layout_campos"
            />


        <TextView
            android:id="@+id/text_registar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nao_tens_conta"
            android:layout_marginTop="10dp"
            app:layout_constraintBottom_toTopOf="@+id/registerButton"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/loginButton"
            />


        <Button
            android:id="@+id/registerButton"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:text="@string/register"
            android:layout_marginBottom="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_registar"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>