<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/historico_fragment"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    >

    <TextView
        android:id="@+id/historico_titulo"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        style="@style/TextAppearance.AppCompat.Title"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="5dp"
        android:text="@string/capture_history"
        android:textColor="@color/colorPrimary"
        android:textAlignment="center"
        />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        style="@style/CardView.Light">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:weightSum="3"
            >

            <TextView
                android:id="@+id/historico_foto"
                style="@style/TextAppearance.AppCompat.Widget.ActionBar.Subtitle"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_margin="2dp"
                android:text="@string/foto"
                android:textAlignment="center"
                />

            <TextView
                android:id="@+id/historico_nome"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/nome"
                android:textAlignment="center"
                android:layout_margin="2dp"
                style="@style/TextAppearance.AppCompat.Widget.ActionBar.Subtitle"
                />

            <TextView
                android:id="@+id/historico_Classificacao"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/classificacao"
                android:textAlignment="center"
                android:layout_margin="2dp"
                style="@style/TextAppearance.AppCompat.Widget.ActionBar.Subtitle"
                />


        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/capture_history_lista"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        />


</LinearLayout>